api do giphy implementada

--- a/projeto2/WebContent/WEB-INF/lib/form_style.css
+++ b/projeto2/WebContent/WEB-INF/lib/form_style.css
@@ -17,6 +17,12 @@
 	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0
 		rgba(0, 0, 0, 0.24);
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 18%;
+}
 
 .form input {
 	font-family: "Roboto", sans-serif;
