--- a/projeto2/WebContent/WEB-INF/lib/style.css
+++ b/projeto2/WebContent/WEB-INF/lib/style.css
@@ -49,6 +49,16 @@ body {
 	padding-bottom: 1%;
 }
 
+#gif4 {
+	font-family: "Arial", sans-serif;
+	color: black;
+	text-align: justify;
+	font-size: 100%;
+	line-height: 1.2;
+	height: 50%;
+	padding-bottom: 1%;
+}
+
 .grid-item {
 	background-color: #f2f2f2;
 	border: 1px solid #bfc6d9;
